--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,22 +12,23 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.4",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.12.1",
-    "nuxt": "^2.15.6"
+    "core-js": "^3.14.0",
+    "nuxt": "^2.15.6",
+    "vue-typeahead-bootstrap": "^2.11.1"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^6.0.0",
+    "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.27.0",
+    "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.7.0",
-    "prettier": "^2.3.0"
+    "eslint-plugin-vue": "^7.10.0",
+    "prettier": "^2.3.1"
   }
 }
