--- a/training/ner_model/config.cfg
+++ b/training/ner_model/config.cfg
@@ -22,6 +22,7 @@ tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
 
 [components.ner]
 factory = "ner"
+incorrect_spans_key = null
 moves = null
 update_with_oracle_cut_size = 100
 
@@ -35,17 +36,17 @@ use_upper = true
 nO = null
 
 [components.ner.model.tok2vec]
-@architectures = "spacy.Tok2Vec.v1"
+@architectures = "spacy.Tok2Vec.v2"
 
 [components.ner.model.tok2vec.embed]
-@architectures = "spacy.MultiHashEmbed.v1"
+@architectures = "spacy.MultiHashEmbed.v2"
 width = 96
 attrs = ["NORM","PREFIX","SUFFIX","SHAPE"]
 rows = [5000,2500,2500,2500]
 include_static_vectors = false
 
 [components.ner.model.tok2vec.encode]
-@architectures = "spacy.MaxoutWindowEncoder.v1"
+@architectures = "spacy.MaxoutWindowEncoder.v2"
 width = 96
 depth = 4
 window_size = 1
@@ -79,6 +80,7 @@ max_epochs = 0
 max_steps = 20000
 eval_frequency = 200
 frozen_components = []
+annotating_components = []
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
 before_to_disk = null
@@ -112,10 +114,10 @@ eps = 0.00000001
 learn_rate = 0.001
 
 [training.score_weights]
-ents_per_type = null
 ents_f = 1.0
 ents_p = 0.0
 ents_r = 0.0
+ents_per_type = null
 
 [pretraining]
 
